# distribuida

./: CMakeLists.txt  README.md  client_py.py  cliente.cpp  notas.proto  notas_pb2_grpc.py  server_py.py  servidor.cpp
